move files around so jekyll files are in input/ not input/html

--- a/_config.yml
+++ b/_config.yml
@@ -5,9 +5,9 @@ server_port: 4000
 baseurl:    /
 url: http://localhost:4000
 
-source:      ./input/html
+source:      ./input
 destination: ./output
-plugins:     ./input/html/_plugins
+plugins:     ./input/_plugins
 
 future:      true
 lsi:         false
